tests/derive_ui/clap_empty_attr.stderr
error: expected attribute arguments in parentheses: #[command(...)]
 --> tests/derive_ui/clap_empty_attr.rs:4:3
  |
4 | #[command]
  |   ^^^^^^^

error: expected parentheses: #[arg(...)]
 --> tests/derive_ui/clap_empty_attr.rs:9:11
  |
9 |     #[arg = "short"]
  |           ^
